extends Node2D



func _on_Button_pressed():
	$ALabelWithAnimation._set_arabic_animation("كيف الحال؟")
	pass # Replace with function body.

func _on_Button2_pressed():
	$ALabelWithAnimation._set_arabic_animation("جودوت برنامج رائع!")
	pass # Replace with function body.

func _on_Button3_pressed():
	$ALabelWithAnimation._set_arabic_animation("حسنا مع السلامة!")
	pass # Replace with function body.
